// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar renders correctly when logged in as "researcher" 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Navbar>
      <nav
        aria-label="main navigation"
        className="navbar is-info"
        role="navigation"
      >
        <div
          className="navbar-brand"
        >
          <Link
            className="navbar-item logo"
            onClick={[Function]}
            to="/manage-dataset"
          >
            <a
              className="navbar-item logo"
              href="/manage-dataset"
              onClick={[Function]}
            >
              <img
                alt="OBIS"
                src="obis-logo.png"
                title="OBIS"
              />
               ADMIN
            </a>
          </Link>
          <a
            aria-label="main navigation"
            className="navbar-burger"
            onClick={[Function]}
            role="button"
          >
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
          </a>
        </div>
        <div
          className="navbar-menu"
        >
          <LoginNavItem
            loggedIn={true}
          >
            <div
              className="login-nav-item navbar-end"
            >
              <span
                className="navbar-item"
              >
                Charles Darwin
              </span>
              <AuthButton
                labelKey="navbar.logout"
                onClick={[MockFunction]}
              >
                <a
                  className="auth-button navbar-item"
                  onClick={[MockFunction]}
                >
                  <span
                    className="icon"
                    style={
                      Object {
                        "marginRight": 6,
                      }
                    }
                  >
                    <FontAwesomeIcon
                      icon="user"
                    >
                      <i
                        className="fa"
                        icon="user"
                      />
                    </FontAwesomeIcon>
                  </span>
                  navbar.logout
                </a>
              </AuthButton>
            </div>
          </LoginNavItem>
        </div>
      </nav>
    </Navbar>
  </Router>
</MemoryRouter>
`;

exports[`Navbar renders correctly when logged out 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Navbar>
      <nav
        aria-label="main navigation"
        className="navbar is-info"
        role="navigation"
      >
        <div
          className="navbar-brand"
        >
          <Link
            className="navbar-item logo"
            onClick={[Function]}
            to="/manage-dataset"
          >
            <a
              className="navbar-item logo"
              href="/manage-dataset"
              onClick={[Function]}
            >
              <img
                alt="OBIS"
                src="obis-logo.png"
                title="OBIS"
              />
               ADMIN
            </a>
          </Link>
          <a
            aria-label="main navigation"
            className="navbar-burger"
            onClick={[Function]}
            role="button"
          >
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
          </a>
        </div>
        <div
          className="navbar-menu"
        >
          <LoginNavItem
            loggedIn={false}
          >
            <div
              className="login-nav-item navbar-end"
            >
              <span
                className="navbar-item"
              >
                Charles Darwin
              </span>
              <AuthButton
                labelKey="navbar.login"
                onClick={[MockFunction]}
              >
                <a
                  className="auth-button navbar-item"
                  onClick={[MockFunction]}
                >
                  <span
                    className="icon"
                    style={
                      Object {
                        "marginRight": 6,
                      }
                    }
                  >
                    <FontAwesomeIcon
                      icon="user"
                    >
                      <i
                        className="fa"
                        icon="user"
                      />
                    </FontAwesomeIcon>
                  </span>
                  navbar.login
                </a>
              </AuthButton>
            </div>
          </LoginNavItem>
        </div>
      </nav>
    </Navbar>
  </Router>
</MemoryRouter>
`;

exports[`Navbar when logged in as "node manager" renders correctly for route /  1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Navbar>
      <nav
        aria-label="main navigation"
        className="navbar is-info"
        role="navigation"
      >
        <div
          className="navbar-brand"
        >
          <Link
            className="navbar-item logo"
            onClick={[Function]}
            to="/manage-dataset"
          >
            <a
              className="navbar-item logo"
              href="/manage-dataset"
              onClick={[Function]}
            >
              <img
                alt="OBIS"
                src="obis-logo.png"
                title="OBIS"
              />
               ADMIN
            </a>
          </Link>
          <a
            aria-label="main navigation"
            className="navbar-burger"
            onClick={[Function]}
            role="button"
          >
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
          </a>
        </div>
        <div
          className="navbar-menu"
        >
          <div
            className="navbar-start"
          >
            <NavbarItem
              onClick={[Function]}
              to="/manage-dataset"
            >
              <NavLink
                activeClassName="is-active"
                className="navbar-item"
                onClick={[Function]}
                to="/manage-dataset"
              >
                <Link
                  aria-current={null}
                  className="navbar-item"
                  onClick={[Function]}
                  to="/manage-dataset"
                >
                  <a
                    aria-current={null}
                    className="navbar-item"
                    href="/manage-dataset"
                    onClick={[Function]}
                  >
                    navbar.manageDataset
                  </a>
                </Link>
              </NavLink>
            </NavbarItem>
            <NavbarItem
              onClick={[Function]}
              to="/manage-users"
            >
              <NavLink
                activeClassName="is-active"
                className="navbar-item"
                onClick={[Function]}
                to="/manage-users"
              >
                <Link
                  aria-current={null}
                  className="navbar-item"
                  onClick={[Function]}
                  to="/manage-users"
                >
                  <a
                    aria-current={null}
                    className="navbar-item"
                    href="/manage-users"
                    onClick={[Function]}
                  >
                    navbar.manageUsers
                  </a>
                </Link>
              </NavLink>
            </NavbarItem>
          </div>
          <LoginNavItem
            loggedIn={true}
          >
            <div
              className="login-nav-item navbar-end"
            >
              <span
                className="navbar-item"
              >
                Charles Darwin
              </span>
              <AuthButton
                labelKey="navbar.logout"
                onClick={[MockFunction]}
              >
                <a
                  className="auth-button navbar-item"
                  onClick={[MockFunction]}
                >
                  <span
                    className="icon"
                    style={
                      Object {
                        "marginRight": 6,
                      }
                    }
                  >
                    <FontAwesomeIcon
                      icon="user"
                    >
                      <i
                        className="fa"
                        icon="user"
                      />
                    </FontAwesomeIcon>
                  </span>
                  navbar.logout
                </a>
              </AuthButton>
            </div>
          </LoginNavItem>
        </div>
      </nav>
    </Navbar>
  </Router>
</MemoryRouter>
`;

exports[`Navbar when logged in as "node manager" renders correctly for route /manage-dataset  1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/manage-dataset",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/manage-dataset",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/manage-dataset",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Navbar>
      <nav
        aria-label="main navigation"
        className="navbar is-info"
        role="navigation"
      >
        <div
          className="navbar-brand"
        >
          <Link
            className="navbar-item logo"
            onClick={[Function]}
            to="/manage-dataset"
          >
            <a
              className="navbar-item logo"
              href="/manage-dataset"
              onClick={[Function]}
            >
              <img
                alt="OBIS"
                src="obis-logo.png"
                title="OBIS"
              />
               ADMIN
            </a>
          </Link>
          <a
            aria-label="main navigation"
            className="navbar-burger"
            onClick={[Function]}
            role="button"
          >
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
          </a>
        </div>
        <div
          className="navbar-menu"
        >
          <div
            className="navbar-start"
          >
            <NavbarItem
              onClick={[Function]}
              to="/manage-dataset"
            >
              <NavLink
                activeClassName="is-active"
                className="navbar-item"
                onClick={[Function]}
                to="/manage-dataset"
              >
                <Link
                  aria-current="page"
                  className="navbar-item is-active"
                  onClick={[Function]}
                  style={Object {}}
                  to="/manage-dataset"
                >
                  <a
                    aria-current="page"
                    className="navbar-item is-active"
                    href="/manage-dataset"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    navbar.manageDataset
                  </a>
                </Link>
              </NavLink>
            </NavbarItem>
            <NavbarItem
              onClick={[Function]}
              to="/manage-users"
            >
              <NavLink
                activeClassName="is-active"
                className="navbar-item"
                onClick={[Function]}
                to="/manage-users"
              >
                <Link
                  aria-current={null}
                  className="navbar-item"
                  onClick={[Function]}
                  to="/manage-users"
                >
                  <a
                    aria-current={null}
                    className="navbar-item"
                    href="/manage-users"
                    onClick={[Function]}
                  >
                    navbar.manageUsers
                  </a>
                </Link>
              </NavLink>
            </NavbarItem>
          </div>
          <LoginNavItem
            loggedIn={true}
          >
            <div
              className="login-nav-item navbar-end"
            >
              <span
                className="navbar-item"
              >
                Charles Darwin
              </span>
              <AuthButton
                labelKey="navbar.logout"
                onClick={[MockFunction]}
              >
                <a
                  className="auth-button navbar-item"
                  onClick={[MockFunction]}
                >
                  <span
                    className="icon"
                    style={
                      Object {
                        "marginRight": 6,
                      }
                    }
                  >
                    <FontAwesomeIcon
                      icon="user"
                    >
                      <i
                        className="fa"
                        icon="user"
                      />
                    </FontAwesomeIcon>
                  </span>
                  navbar.logout
                </a>
              </AuthButton>
            </div>
          </LoginNavItem>
        </div>
      </nav>
    </Navbar>
  </Router>
</MemoryRouter>
`;

exports[`Navbar when logged in as "node manager" renders correctly for route /manage-users  1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/manage-users",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/manage-users",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/manage-users",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Navbar>
      <nav
        aria-label="main navigation"
        className="navbar is-info"
        role="navigation"
      >
        <div
          className="navbar-brand"
        >
          <Link
            className="navbar-item logo"
            onClick={[Function]}
            to="/manage-dataset"
          >
            <a
              className="navbar-item logo"
              href="/manage-dataset"
              onClick={[Function]}
            >
              <img
                alt="OBIS"
                src="obis-logo.png"
                title="OBIS"
              />
               ADMIN
            </a>
          </Link>
          <a
            aria-label="main navigation"
            className="navbar-burger"
            onClick={[Function]}
            role="button"
          >
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
          </a>
        </div>
        <div
          className="navbar-menu"
        >
          <div
            className="navbar-start"
          >
            <NavbarItem
              onClick={[Function]}
              to="/manage-dataset"
            >
              <NavLink
                activeClassName="is-active"
                className="navbar-item"
                onClick={[Function]}
                to="/manage-dataset"
              >
                <Link
                  aria-current={null}
                  className="navbar-item"
                  onClick={[Function]}
                  to="/manage-dataset"
                >
                  <a
                    aria-current={null}
                    className="navbar-item"
                    href="/manage-dataset"
                    onClick={[Function]}
                  >
                    navbar.manageDataset
                  </a>
                </Link>
              </NavLink>
            </NavbarItem>
            <NavbarItem
              onClick={[Function]}
              to="/manage-users"
            >
              <NavLink
                activeClassName="is-active"
                className="navbar-item"
                onClick={[Function]}
                to="/manage-users"
              >
                <Link
                  aria-current="page"
                  className="navbar-item is-active"
                  onClick={[Function]}
                  style={Object {}}
                  to="/manage-users"
                >
                  <a
                    aria-current="page"
                    className="navbar-item is-active"
                    href="/manage-users"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    navbar.manageUsers
                  </a>
                </Link>
              </NavLink>
            </NavbarItem>
          </div>
          <LoginNavItem
            loggedIn={true}
          >
            <div
              className="login-nav-item navbar-end"
            >
              <span
                className="navbar-item"
              >
                Charles Darwin
              </span>
              <AuthButton
                labelKey="navbar.logout"
                onClick={[MockFunction]}
              >
                <a
                  className="auth-button navbar-item"
                  onClick={[MockFunction]}
                >
                  <span
                    className="icon"
                    style={
                      Object {
                        "marginRight": 6,
                      }
                    }
                  >
                    <FontAwesomeIcon
                      icon="user"
                    >
                      <i
                        className="fa"
                        icon="user"
                      />
                    </FontAwesomeIcon>
                  </span>
                  navbar.logout
                </a>
              </AuthButton>
            </div>
          </LoginNavItem>
        </div>
      </nav>
    </Navbar>
  </Router>
</MemoryRouter>
`;
